--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=run npx tsc && node ./dist/index.js",
+    "dev": "NODE_ENV=run npx tsc && nodemon --watch 'src/' --exec 'ts-node ./src/index.ts' -e ts",
+    "test": "NODE_ENV=test jest --passWithNoTests -i"
   },
   "repository": {
     "type": "git",
@@ -41,6 +43,7 @@
     "@types/node": "^18.13.0",
     "@types/supertest": "^2.0.12",
     "jest": "^29.4.3",
+    "nodemon": "^2.0.20",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
