--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=run npx tsc && node ./dist/index.js",
-    "dev": "NODE_ENV=run npx tsc && nodemon --watch 'src/' --exec 'ts-node ./src/index.ts' -e ts",
-    "test": "NODE_ENV=test jest --passWithNoTests -i"
+    "start:dev": "NODE_ENV=run npx tsc && nodemon --watch 'src/' --exec 'ts-node ./src/index.ts' -e ts",
+    "test": "NODE_ENV=test jest --passWithNoTests -i",
+    "test:watch": "NODE_ENV=test jest --watch --passWithNoTests -i",
+    "lint": "eslint ./src/*",
+    "lint:fix": "eslint ./src/* --fix"
   },
   "repository": {
     "type": "git",
@@ -42,6 +45,10 @@
     "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/parser": "^5.52.0",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.4.3",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.3",
