--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/guilhermeicarofr/API-Orcamento#readme",
   "dependencies": {
+    "axios": "^1.3.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
