--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start:dev": "NODE_ENV=run npx tsc && nodemon --watch 'src/' --exec 'ts-node -r tsconfig-paths/register ./src/index.ts' -e ts",
     "test": "NODE_ENV=test jest --passWithNoTests -i",
     "test:watch": "NODE_ENV=test jest --watch --passWithNoTests -i",
-    "lint": "eslint ./src/*",
-    "lint:fix": "eslint ./src/* --fix"
+    "lint": "eslint ./src/*/*",
+    "lint:fix": "eslint ./src/*/* --fix"
   },
   "repository": {
     "type": "git",
