--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "NODE_ENV=run npx tsc && node ./dist/index.js",
     "start:dev": "NODE_ENV=run npx tsc && nodemon --watch 'src/' --exec 'ts-node -r tsconfig-paths/register ./src/index.ts' -e ts",
     "test": "NODE_ENV=test jest --passWithNoTests -i",
+    "test:coverage": "NODE_ENV=test jest --passWithNoTests -i --coverage --collectCoverageFrom='./src/**'",
     "test:watch": "NODE_ENV=test jest --watch --passWithNoTests -i",
     "lint": "eslint ./src/*/*",
     "lint:fix": "eslint ./src/*/* --fix"
